# TensorHEOM

./: .gitignore  .pylintrc  CITATION.bib  MANIFEST.in  README.md  pyproject.toml  three_qubit_multi.py
.github/workflows/: code-quality.yml
development/: 1qubit.qpy  1qubit_init+.csv  1qubit_init0.csv  2qubit_1.qpy  2qubit_1_init+.csv  2qubit_1_init0.csv  2qubit_2.qpy  3_qubit.qpy  development-Copy1.ipynb  development.ipynb  development2.ipynb
docs/: biblio.bib  conf.py  copyright.rst  index.rst  installation.rst  quickstart.rst
docs/apidoc/: apidoc.rst  classes.rst  functions.rst
docs/gui/: gui.rst
docs/guide/: guide.rst
heom/: TTs.py  TTs1Q.py  TTs2QId.py  __init__.py  bath.py  dynamics.py  heom-default.mplstyle  main.py  opett.py  tdevott.py  tt.py
heom/bath/: __init__.py  broadband.py  params.py
heom/circuit/: __init__.py  pulse_seq.py  transform_circ.py
heom/cui/: run.py
heom/data/: s1.json  s2.json  s8.json
heom/dynamics/: dynamics.py  tdevott.py
heom/evaluation/: __init__.py  concurrence.py  load_result.py  plot_pulse_seq.py
heom/gui/: __init__.py  circuit_editor_window.py  gui_utils.py  help_frame.py  help_window.py  hpc_settings_window.py  left_frame.py  main_window.py  middle_frame.py  plotting_window.py  right_frame.py  scrollable_console_frame.py  state_editor_window.py
heom/pulse/: __init__.py  abstract_pulse.py  direct_cpl_step_varJ.py  iswapd.py  rxy_step.py  set_gates.py  u3.py
heom/samples/: 1qubit.py  2qubit.py  2qubit01.py  2qubit02.py  __init__.py  one_qubit.py  one_qubit_realistic.py  rdo_1qubit.csv  rdo_1qubit_realistic.csv  rdo_2qubit.csv  rdo_2qubit01.csv  rdo_2qubit02.csv  rdo_3qubit.csv  three_qubit.py  two_qubit01.py  two_qubit02.py
heom/ssh/: __init__.py  commands.py  connect_ssh.py  connect_ssh_deprecated.py  io_qc.py  job_control.py  slurm.py
heom/tt/: TTs.py  TTs1Q.py  TTs2QId.py  TTsMQChainId.py  TTsTwoLevel.py  TTsTwoLevelId.py  __init__.py
heom/utils/: __init__.py  fidelity.py  helpers.py  io_mpl.py
pythonTT/: development.ipynb
requirements/: dev-requirements.txt  requirements.txt
tests/: test_main.py
ttheom/: __init__.py  main.py  ttheom-default.mplstyle
ttheom/bath/: broadband.py
ttheom/circuit/: pulse_seq.py
ttheom/cui/: run.py
ttheom/dynamics/: __init__.py  dynamics.py  opett.py  tdevott.py
ttheom/evaluation/: __init__.py  concurrence.py  fidelity.py  load_result.py  logarithmic_negativity.py  plot_pulse_seq.py
ttheom/gui/: gui_utils.py  main_window.py
(+40 files in other folders)
