[project]
name = "heom_dehe1011"
description = "A package to investigate environmental effects on quantum gates."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

authors = [
    { name = "Kiyoto Nakamura", email = "kiyoto.nakamura@uni-ulm.de" },
    { name = "Dennis Herb", email = "dennis.herb@uni-ulm.de" },
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["heom", "heom.gui"]

[tool.setuptools.dynamic]
version = {attr = "heom.__version__"}
dependencies = {file = "requirements/requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev-requirements.txt" }
docs = { file = "requirements/doc-requirements.txt" }

[project.urls]
repository = "https://github.com/dehe1011/HEOM"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = true
